--- a/notebooks/2_compression_visualization.ipynb
+++ b/notebooks/2_compression_visualization.ipynb
@@ -49,24 +49,21 @@
    "source": [
     "sample_id = PATH_TO_SAMPLE.split(\".json\")[0].split(\"/\")[-1]\n",
     "\n",
+    "# sample in time domain\n",
     "time_sample = get_sample_from_json(PATH_TO_SAMPLE, sample_id, dct=False)\n",
+    "\n",
+    "# sample in dct domain\n",
     "dct_sample = deepcopy(time_sample)\n",
-    "dct_sample.convert_to_dct()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dct_sample.convert_to_dct()\n",
+    "\n",
+    "# compressed sample\n",
     "dct_sample_compressed = deepcopy(dct_sample)\n",
     "dct_sample_compressed.compress()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,21 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dft_sample = time_sample[cable][dir].to_dft()\n",
-    "dct_sample = time_sample[cable][dir].to_dct()\n",
-    "\n",
-    "dct_sample_compressed = deepcopy(dct_sample)\n",
-    "dct_sample_compressed.compute_dct_threshold(0.05)\n",
-    "dct_sample_compressed.compress()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -258,6 +241,13 @@
     "        i+=1\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
